--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Regístrate App</string>
+    <string name="app_name">Regístrate</string>
     <string name="title_activity_bottom_navigation">BottomNavigation</string>
     <string name="title_home">Panel Principal</string>
     <string name="title_dashboard">Historial</string>
