Revert "Replaced assistance fragment by notifications fragment"
This reverts commit cbe2265a11f2b2d103089c60f3dcb773221da064.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Regístrate</string>
     <string name="title_activity_bottom_navigation">BottomNavigation</string>
-    <string name="home_fragment_title">Panel Principal</string>
+    <string name="title_home">Panel Principal</string>
     <string name="title_dashboard">Historial</string>
-
-    <string name="devices_fragment_title">Equipos</string>
+    <string name="title_notifications">Permisos</string>
+    <string name="title_devices">Equipos</string>
 
     <string name="geofences_added">Geofences added</string>
     <string name="geofences_removed">Geofences removed</string>
@@ -40,7 +40,5 @@
 
     <!-- UI string values -->
     <string name="empty_notifications_message">No hay notificaciones nuevas en este momento.</string>
-    <string name="notifications_fragment_title">Notificaciones</string>
-    <string name="permissions_fragment_title">Permisos</string>
 
 </resources>
