--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
     <string name="title_example">Comunicado</string>
     <string name="title_label">Título:</string>
     <string name="message_label">Mensage:</string>
+    <string name="title_add_device_fragment">Agregar Dispositivo</string>
 
 </resources>
