Handled push token update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,9 @@
     <string name="title_label">Título:</string>
     <string name="message_label">Mensage:</string>
     <string name="title_add_device_fragment">Agregar Dispositivo</string>
+    <string name="text_status_active">Activo</string>
+    <string name="label_device_status">Estado:</string>
+    <string name="label_imei">IMEI:</string>
+    <string name="label_device_model">Modelo:</string>
 
 </resources>
