--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,9 @@
     <string name="label_imei">IMEI: </string>
     <string name="label_device_model">Modelo: </string>
     <string name="text_status_inactive">Inactivo</string>
+    <string name="label_notification_title">Título:</string>
+    <string name="label_notification_sent_date">Fecha de envío:</string>
+    <string name="tools_title_example">Lorem Ipsum</string>
+    <string name="tools_date_example">06/04/2020</string>
 
 </resources>
