--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,6 @@
     <string name="label_notification_sent_date">Fecha de envío:</string>
     <string name="tools_title_example">Lorem Ipsum</string>
     <string name="tools_date_example">06/04/2020</string>
+    <string name="notification_exit_title">Se ha registrado su salida</string>
 
 </resources>
