--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,12 @@
     <string name="device_already_taken_title">Ah ocurrido un error</string>
     <string name="invalid_credentials_title">Autenticación fallida</string>
     <string name="invalid_credentials">El usuario y contraseña \nproporcionados no son correctos.</string>
+    <string name="password_hint">Contraseña</string>
+    <string name="email_hint">Email</string>
+    <string name="welcome">Bienvenido</string>
+    <string name="init_session_label">Iniciar sesión</string>
+    <string name="access_label">Acceder</string>
+    <string name="logo_alt">logo</string>
+    <string name="login_button_alt">Acceder</string>
 
 </resources>
