Showing a dialog that user is not in a work zone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,5 +92,7 @@
     <string name="location_channel_description">Notificaciones de tu locaclización</string>
     <string name="no_internet_connection_title">Error de red</string>
     <string name="no_internet_connection">Al parecer no tienes acceso a internet</string>
+    <string name="not_correct_location_title">Ups</string>
+    <string name="not_correct_location_message">No te encuentras en una zona de trabajo</string>
 
 </resources>
