Fixed styles for the base dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,14 +85,18 @@
     <string name="logo_alt">logo</string>
     <string name="login_button_alt">Acceder</string>
 
-    <!-- Notification sttings -->
+    <string name="not_correct_location_title">No es posible</string>
+    <string name="not_correct_location_message">No te encuentras en una zona de trabajo</string>
+
+    <!-- Notification settings -->
     <string name="notification_channel_name">Mensajes</string>
     <string name="notification_channel_description">Mensajes de la empresa</string>
+
     <string name="location_channel_name">Notificaciones</string>
     <string name="location_channel_description">Notificaciones de tu locaclización</string>
+
     <string name="no_internet_connection_title">Error de red</string>
     <string name="no_internet_connection">Al parecer no tienes acceso a internet</string>
-    <string name="not_correct_location_title">Ups</string>
-    <string name="not_correct_location_message">No te encuentras en una zona de trabajo</string>
+
 
 </resources>
