--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Camello</string>
-    <string name="title_activity_bottom_navigation">BottomNavigation</string>
+    <string name="title_activity_main">MainActivity</string>
     <string name="home_fragment_title">Panel Principal</string>
     <string name="title_dashboard">Historial</string>
 
