Replacing the dialog progress hwne we finish a process

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,6 +110,7 @@
     <string name="error">Error</string>
     <string name="unknown_error">Ah ocurrido un error</string>
     <string name="processing">Procesando</string>
+    <string name="success">Completado</string>
 
 
 </resources>
