Created endpoint for sync notifications. Not used yet because we need a unique id for each notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
     <string name="server_error_600_outside_working_hours">Fuera de horario laboral</string>
     <string name="server_error_601">No se pudo sincronizar la asistencia correctamente</string>
     <string name="error">Error</string>
-    <string name="unknown_error">Ah ocurrido un error</string>
+    <string name="unknown_error">Algo salió mal</string>
     <string name="processing">Procesando</string>
     <string name="success">Completado</string>
 
