--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="label_notification_sent_date">Fecha de envío:</string>
     <string name="tools_title_example">Lorem Ipsum</string>
     <string name="tools_date_example">06/04/2020</string>
-    <string name="notification_exit_title">Se ha registrado su salida</string>
+    <string name="notification_exit_title">Salió de su zona de trabajo</string>
     <string name="dialog_permission_title">Solicitar Permiso</string>
     <string name="start_date_label">Fecha inicio</string>
     <string name="end_date_label">Fecha fin</string>
