--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,6 +172,9 @@
     <string name="server_error_804">No se encontro el recurso.</string>
     <string name="server_error_900">El código del dispositivo no esta registrado.</string>
     <string name="synced">Sincronizado</string>
+    <string name="disclosure_title">Uso de tu localización</string>
+    <string name="disclosure_explanation">Camello accede a tu ubicación en segundo plano para poder comprobar si te encuentras o no en una zona de trabajo, y de acuerdo a eso poder registrar un periodo.\n\nUna vez que has iniciado un periodo, Camello accede a tu ubicación en segundo plano incluso si la aplicación es cerrada o no está siendo usada.</string>
+    <string name="disclosure_positive_button">Siguiente</string>
 
 
 </resources>
